deployments/openldap/sec/openldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap-deployment
  labels:
    app: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
      - name: openldap
        image: bitnami/openldap:latest
        ports:
        - containerPort: 389
          name: ldap
        volumeMounts:
        - name: ldap-data
          mountPath: /bitnami/openldap
        - name: openldap-config
          mountPath: /bitnami/openldap/memberof.ldif
          subPath: memberof.ldif
        - name: openldap-config
          mountPath: /bitnami/openldap/inittree.ldif
          subPath: inittree.ldif
        - name: openldap-config
          mountPath: /bitnami/openldap/nifi.ldif
          subPath: nifi.ldif
        - name: openldap-config
          mountPath: /bitnami/openldap/airflow.ldif
          subPath: airflow.ldif
        - name: openldap-config
          mountPath: /bitnami/openldap/trino.ldif
          subPath: trino.ldif
        - name: openldap-config
          mountPath: /bitnami/openldap/ranger.ldif
          subPath: ranger.ldif
        - name: openldap-config
          mountPath: /bitnami/openldap/superset.ldif
          subPath: superset.ldif
        - name: openldap-config
          mountPath: /bitnami/openldap/zeppelin.ldif
          subPath: zeppelin.ldif
        - name: openldap-config
          mountPath: /bitnami/openldap/jupyterhub.ldif
          subPath: jupyterhub.ldif
      volumes:
      - name: ldap-data
        persistentVolumeClaim:
          claimName: ldap-data-pvc
      - name: openldap-config
        configMap:
           name: openldap-cfg
---
apiVersion: v1
kind: Service
metadata:
  name: openldap-svc
  labels:
    app: ldap
spec:
  type: ClusterIP
  selector:
    app: ldap
  ports:
    - protocol: TCP
      port: 389
      targetPort: 389
      name: ldap
